--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "author": "Fernando Herrera",
   "license": "MIT",
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "@types/node": "^20.10.6",
+    "nodemon": "^3.0.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "axios": "^1.4.0",
