--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/app.js",
-    "dev": "nodemon src/app.js",
-    "start:dev": "echo 'Hola mundo desde dev' ",
-    "start:stag": "echo 'Hola mundo desde dev' "
+    "dev": "nodemon ",
+    "build": "rimraf ./dist && tsc",
+    "start": "npm run build && node dist/app.js"
   },
   "author": "Fernando Herrera",
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^20.10.6",
     "nodemon": "^3.0.2",
+    "rimraf": "^5.0.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
